--- a/projekt/projekt/Views/Meals/Create.cshtml
+++ b/projekt/projekt/Views/Meals/Create.cshtml
@@ -73,7 +73,7 @@
                                     <select asp-for="@Model.Produkty[i].Nazwa" class="form-control" asp-items="ViewBag.ProduktyLista" onchange="FillValues(this);"></select>
                                 </td>
                                     <td class="wlasciwosclisty">
-                                        <input asp-for="@Model.Ilosc[i]" class="form-control ilosc_class do_zmiany" />
+                                        <input asp-for="@Model.Ilosc[i]" class="form-control ilosc_class do_zmiany" onchange="Calculate(this)" value="100" />
                                         <span asp-validation-for="@Model.Ilosc[i]" class="text-danger"></span>
 									</td>
                                     <td class ="wlasciwosclisty">
@@ -87,16 +87,16 @@
                                     <td class="wlasciwosclisty">
 										<input asp-for="@Model.Produkty[i].Tłuszcz" class="form-control" readonly/>
 										
-									</td class ="wlasciwosclisty">
+									</td >
                                     <td class ="wlasciwosclisty">
                                         <input asp-for="@Model.Produkty[i].Węglowodany" class="form-control" readonly/>
-                                    </td class ="wlasciwosclisty">
+                                    </td >
                                     <td class ="wlasciwosclisty">
 										<input asp-for="@Model.Produkty[i].Błonnik" class="form-control" readonly/>	
                                         <input type="hidden" asp-for="@Model.Produkty[i].IsDeleted" />	
-									</td class ="wlasciwosclisty">
+									</td>
                                     <td style="width:60px;">
-                                         <button id='btnremove-@i' type="button" class="btn btn-sm btn-danger visible" onclick="CalcTotals()">
+                                <button id='btnremove-@i' type="button" class="btn btn-sm btn-danger visible" onclick="DeleteItem(this)">
                                              Delete
                                         </button>
                                         </td>
@@ -132,15 +132,15 @@
                                  </th>
 
                                  <th style="width:13%;">	
-                                     <input type="text" id="" class="form-control form-control-plaintext" value="" />
+                                     <input type="text" id="tluszcz_total" class="form-control form-control-plaintext" value="" />
                                  </th>                  
                                 
                                  <th style="width:13%;">	
-                                     <input type="text" id="" class="form-control form-control-plaintext" value="" />
+                                     <input type="text" id="weglo_total" class="form-control form-control-plaintext" value="" />
                                  </th>					
 
                                  <th style="width:13%;">									
-                                    <input type="text" id="txtAmountTotal" class="form-control form-control-plaintext" value="" />
+                                    <input type="text" id="blonnik_total" class="form-control form-control-plaintext" value="" />
                                  </th>					
                                 
                                  <th style="width:9%;">                                      
@@ -179,49 +179,112 @@
 
        var myArray = JSON.parse('@Json.Serialize(ViewBag.ProduktyLista)');
        var kalorycznoscArray = JSON.parse('@Json.Serialize(ViewBag.Kalorycznosc)');
-       
-        
-       
-
-        
+       var bialkoArray = JSON.parse('@Json.Serialize(ViewBag.Bialko)');
+       var tluszczArray = JSON.parse('@Json.Serialize(ViewBag.Tluszcz)');
+       var wegloArray = JSON.parse('@Json.Serialize(ViewBag.Weglowodany)');
+       var blonnikArray = JSON.parse('@Json.Serialize(ViewBag.Blonnik)');
+   
       function FillValues(item){   
           
-          console.log(item)
+        const regex = /\d+/;
+        const match = item.id.match(regex);
+        var number = 100;
+        if (match) {
+          number = parseInt(match[0]);
+        } else {
+        }
+        
+        var id_kalorycznosc = "Produkty_"+number+"__Kaloryczno__";
+        var id_bialko = "Produkty_"+number+"__Bia_ko";
+        var id_tluszcz = "Produkty_"+number+"__T_uszcz";
+        var id_weglo = "Produkty_"+number+"__W_glowodany";
+        var id_blonnik = "Produkty_"+number+"__B_onnik";
 
-          var kalorycznosc = kalorycznoscArray.find(function(element) {
+        var kalorycznosc = kalorycznoscArray.find(function(element) {
         return element.id==item.value;
         });
-        console.log(kalorycznosc.kaloryczność)
-
-        document.getElementById('Produkty_0__T_uszcz').value=kalorycznosc.kaloryczność;
-
         
-        
-            
+        var bialko = bialkoArray.find(function(element) {
+        return element.id==item.value;
+        });
+
+        var tluszcz = tluszczArray.find(function(element) {
+        return element.id==item.value;
+        });
+
+        var weglo = wegloArray.find(function(element) {
+        return element.id==item.value;
+        });
+        var blonnik = blonnikArray.find(function(element) {
+        return element.id==item.value;
+        });
+
+        document.getElementById(id_kalorycznosc).value=kalorycznosc.kaloryczność;
+        document.getElementById(id_bialko).value=bialko.bialko;
+        document.getElementById(id_tluszcz).value=tluszcz.tluszcz;
+        document.getElementById(id_weglo).value=weglo.weglowodany;
+        document.getElementById(id_blonnik).value=blonnik.blonnik;    
+        Calculate(item)
       }
+
+      function Calculate(item){ 
+          
+        const regex = /\d+/;
+        const match = item.id.match(regex);
+        var number = 100;
+        if (match) {
+          number = parseInt(match[0]);     
+        } else {         
+        }
+        var id_ilosc = "Ilosc_"+number+"_"
+        var id_kalorycznosc = "Produkty_"+number+"__Kaloryczno__";
+        var id_bialko = "Produkty_"+number+"__Bia_ko";
+        var id_tluszcz = "Produkty_"+number+"__T_uszcz";
+        var id_weglo = "Produkty_"+number+"__W_glowodany";
+        var id_blonnik = "Produkty_"+number+"__B_onnik";
+
+        var ilosc = document.getElementById(id_ilosc).value;
+        if (ilosc == ""){
+        console.log("Jest puste")
+        return;
+        }
+        console.log("Nie Jest puste")
+        
+        kalorycznosc  = document.getElementById(id_kalorycznosc).value;
+        document.getElementById(id_kalorycznosc).value = (parseFloat(ilosc, 10) * parseFloat(kalorycznosc, 10)/100).toFixed(2)
+        bialko = document.getElementById(id_bialko).value;
+        document.getElementById(id_bialko).value = (parseFloat(ilosc, 10) * parseFloat(bialko, 10)/100).toFixed(2)
+        tluszcz = document.getElementById(id_tluszcz).value;
+        document.getElementById(id_tluszcz).value = (parseFloat(ilosc, 10) * parseFloat(tluszcz, 10)/100).toFixed(2)
+        weglo =  document.getElementById(id_weglo).value;
+        document.getElementById(id_weglo).value = (parseFloat(ilosc, 10) * parseFloat(weglo, 10)/100).toFixed(2)
+        blonnik = document.getElementById(id_blonnik).value ;
+        document.getElementById(id_blonnik).value = (parseFloat(ilosc, 10) * parseFloat(blonnik, 10)/100).toFixed(2)
+
+
+        CalcTotals()
+        
+        }
 
         function DeleteItem(btn) {
 
-	   var table = document.getElementById('TabelaGlowna');
-	   var rows = table.getElementsByTagName('tr');	           
+	        var table = document.getElementById('TabelaGlowna');
+	        var rows = table.getElementsByTagName('tr');	           
             
 	        var btnIdx = btn.id.replaceAll('btnremove-', '');
-            var idOfQuantity = btnIdx + "AAQuantity";
-            var txtQuantity = document.querySelector("[id$='" + idOfQuantity + "']");
+            console.log(btnIdx)
+            var idOfQuantity = "Ilosc_"+btnIdx+"_";
 
-            txtQuantity.value = 0;
-                        
+            var txtQuantity = document.getElementById(idOfQuantity).value = 0;
 
-            var idOfIsDeleted = btnIdx + "AAIsDeleted";
-            var txtIsDeleted = document.querySelector("[id$='" + idOfIsDeleted + "']");            
-            txtIsDeleted.value="true";
-                       
+            var idOfIsDeleted = "Produkty_" + btnIdx + "__IsDeleted";
+            document.getElementById(idOfIsDeleted).value  = "true"
+                 
             $(btn).closest('tr').hide();
 
             CalcTotals();
+            }
 
-
-}
         function AddItem(btn) {
             console.log("Create")
             var table;
@@ -269,33 +332,36 @@
             var ilosc_blonnik= 0;
 
             //var totalQty = 0;
-            var Amount = 0;
-            var totalAmount = 0;
-            var txtExchangeRate= 1;
-          
+            //var Amount = 0;
+            //var totalAmount = 0;
+            //var txtExchangeRate= 1;
+            
+
             var i;
 
             for (i = 0; i < x.length; i++) {                                              
-                
-                var idofIsDeleted = i + "__IsDelete";
+                var id_ilosc = "Ilosc_"+i+"_"
+                var id_kalorycznosc = "Produkty_"+i+"__Kaloryczno__";
+                var id_bialko = "Produkty_"+i+"__Bia_ko";
+                var id_tluszcz = "Produkty_"+i+"__T_uszcz";
+                var id_weglo = "Produkty_"+i+"__W_glowodany";
+                var id_blonnik = "Produkty_"+i+"__B_onnik";
+                var idOfIsDeleted = "Produkty_" + i+ "__IsDeleted";
+               
 
                 var idofIlosc = "#Ilosc_" + i + '_'  ;                
-                
-                 
-              
+                         
                 var iloscId = document.querySelector(idofIlosc).id;
 
                 console.log(i)
-                                                         
 
+                if (document.getElementById(idOfIsDeleted).value != "true") {
+                    ilosc_kalorie = parseFloat(ilosc_kalorie, 10) + parseFloat(document.getElementById(id_kalorycznosc).value, 10);
+                    ilosc_bialko = parseFloat(ilosc_bialko, 10) + parseFloat(document.getElementById(id_bialko).value, 10);
+                    ilosc_tluszcz = parseFloat(ilosc_tluszcz, 10) + parseFloat(document.getElementById(id_tluszcz).value, 10);
+                    ilosc_weglowodany= parseFloat(ilosc_weglowodany, 10) + parseFloat(document.getElementById(id_weglo).value, 10);
+                    ilosc_blonnik= parseFloat(ilosc_blonnik, 10) + parseFloat(document.getElementById(id_blonnik).value, 10);
 
-
-                
-
-                //if (document.getElementById(hidIsDelId).value != "true")
-                if(true)
-                {
-                    console.log(x[i].value);
                     ilosc_total = ilosc_total + eval(x[i].value)
                     
                     //txtprice.value = txtExchangeRate * eval(txtfob.value); 
@@ -307,10 +373,13 @@
             }
             
 
-            document.getElementById('ilosc_total').value = ilosc_total;
-
-
-            document.getElementById('txtAmountTotal').value = totalAmount.toFixed(2);
+            document.getElementById('ilosc_total').value = ilosc_total.toFixed(2);
+            document.getElementById('kalorycznosc_total').value = ilosc_kalorie.toFixed(2);
+            document.getElementById('bialko_total').value = ilosc_bialko.toFixed(2);
+            document.getElementById('tluszcz_total').value = ilosc_tluszcz.toFixed(2);
+            document.getElementById('weglo_total').value = ilosc_weglowodany.toFixed(2);
+            document.getElementById('blonnik_total').value = ilosc_blonnik.toFixed(2);
+           
 
             return;
         }
